Create the student Interface

--- a/student-interface/clubs.html
+++ b/student-interface/clubs.html
@@ -84,7 +84,7 @@
     <div class="no-clubs-events-matches hidden-div">
         <h3 class="text-black-50 fs-5">No Clubs Found</h3>
     </div>
-        <div class="card col-md-4 col-lg-3 club-card text-center pt-2" data-category = "sport">
+        <div class="card col-md-4 col-lg-3 club-card card-to-filter text-center pt-2" data-category = "sport">
                 <div class="image-wrapper">
                     <img src="../images/ping-pong-club.jpg" class="card-img-top rounded-pill" alt="Paddle Pros club">
                 </div>
@@ -94,7 +94,7 @@
                 <a href="#" class="btn clubs-btn">Explore Club</a>
         </div>
       </div>
-        <div class="card col-md-4 col-lg-3 club-card text-center pt-2" data-category="art">
+        <div class="card col-md-4 col-lg-3 club-card card-to-filter text-center pt-2" data-category="art">
             <div class="image-wrapper">
                 <img src="../images/artisan-club.jpg" class="card-img-top rounded-pill" alt="Artisan Alias Club">
             </div>
@@ -104,7 +104,7 @@
             <a href="#" class="btn clubs-btn">Explore Club</a>
         </div>
         </div>
-        <div class="card col-md-4 col-lg-3 club-card text-center pt-2" data-category = "sport">
+        <div class="card col-md-4 col-lg-3 club-card card-to-filter text-center pt-2" data-category = "sport">
             <div class="image-wrapper">
                 <img src="../images/chess-club.jpg" class="card-img-top rounded-pill" alt="Checkmate Club">
             </div>
@@ -114,7 +114,7 @@
             <a href="#" class="btn clubs-btn">Explore Club</a>
     </div>
     </div>
-    <div class="card col-md-4 col-lg-3 club-card text-center pt-2" data-category = "gaming">
+    <div class="card col-md-4 col-lg-3 club-card card-to-filter text-center pt-2" data-category = "gaming">
         <div class="image-wrapper">
             <img src="../images/gaming-club.jpg" class="card-img-top rounded-pill" alt="Pixel Pioneers Club">
         </div>
@@ -124,7 +124,7 @@
         <a href="#" class="btn clubs-btn">Explore Club</a>
     </div>
     </div>
-    <div class="card col-md-4 col-lg-3 club-card text-center pt-2" data-category = "sport">
+    <div class="card col-md-4 col-lg-3 club-card card-to-filter text-center pt-2" data-category = "sport">
         <div class="image-wrapper">
             <img src="../images/hiking-club.jpg" class="card-img-top rounded-pill" alt="Hike Harmony Club">
         </div>
@@ -134,7 +134,7 @@
         <a href="#" class="btn clubs-btn">Explore Club</a>
     </div>
     </div>
-    <div class="card col-md-4 col-lg-3 club-card text-center pt-2" data-category = "art">
+    <div class="card col-md-4 col-lg-3 club-card card-to-filter text-center pt-2" data-category = "art">
         <div class="image-wrapper">
             <img src="../images/knife-club.jpg" class="card-img-top rounded-pill" alt="Sword Club">
         </div>
@@ -144,7 +144,7 @@
         <a href="#" class="btn clubs-btn">Explore Club</a>
     </div>
     </div>
-    <div class="card col-md-4 col-lg-3 club-card text-center pt-2" data-category = "sport">
+    <div class="card col-md-4 col-lg-3 club-card card-to-filter text-center pt-2" data-category = "sport">
         <div class="image-wrapper">
             <img src="../images/run-club.jpg" class="card-img-top rounded-pill" alt="Run For Fun Club">
         </div>
@@ -154,7 +154,7 @@
         <a href="#" class="btn clubs-btn">Explore Club</a>
     </div>
     </div>
-    <div class="card col-md-4 col-lg-3 club-card text-center pt-2" data-category = "technology programming">
+    <div class="card col-md-4 col-lg-3 club-card card-to-filter text-center pt-2" data-category = "technology programming">
         <div class="image-wrapper">
             <img src="../images/tech-titans-club.jpg" class="card-img-top rounded-pill" alt="Tech Titans Club">
         </div>
@@ -164,7 +164,7 @@
         <a href="#" class="btn clubs-btn">Explore Club</a>
     </div>
     </div>
-    <div class="card col-md-4 col-lg-3 club-card text-center pt-2" data-category = "society">
+    <div class="card col-md-4 col-lg-3 club-card card-to-filter text-center pt-2" data-category = "society">
         <div class="image-wrapper">
             <img src="../images/tree-club.jpg" class="card-img-top rounded-pill" alt="Root Revivers Club">
         </div>
@@ -174,7 +174,7 @@
         <a href="#" class="btn clubs-btn">Explore Club</a>
     </div>
     </div>
-    <div class="card col-md-4 col-lg-3 club-card text-center pt-2" data-category = "sport">
+    <div class="card col-md-4 col-lg-3 club-card card-to-filter text-center pt-2" data-category = "sport">
         <div class="image-wrapper">
             <img src="../images/volleyball-club.jpg" class="card-img-top rounded-pill" alt="Volley Victors Club">
         </div>
@@ -184,7 +184,7 @@
         <a href="#" class="btn clubs-btn">Explore Club</a>
     </div>
     </div>
-    <div class="card col-md-4 col-lg-3 club-card text-center pt-2" data-category = "sport">
+    <div class="card col-md-4 col-lg-3 club-card card-to-filter text-center pt-2" data-category = "sport">
         <div class="image-wrapper">
             <img src="../images/yoga-club.jpg" class="card-img-top rounded-pill" alt="Yoga Club">
         </div>
