--- a/student-interface/homepage.html
+++ b/student-interface/homepage.html
@@ -238,7 +238,7 @@
         </div>
         </div>
         <div class="Explore-Events-container d-flex justify-content-center mt-5 mb-5 pt-3 pb-3">
-            <a href="#"><button type="button" class="explore-events-btn">Explore Events</button></a>
+            <a href="../student-interface/events.html"><button type="button" class="explore-events-btn">Explore Events</button></a>
         </div>
       </div>
 
