--- a/student-interface/events.html
+++ b/student-interface/events.html
@@ -92,11 +92,11 @@
           <div class="no-clubs-events-matches hidden-div">
               <h3 class="text-black-50 fs-5">No Events Found</h3>
           </div>
-            <div class="card p-0 col-md-4 col-lg-3 event-card text-center" data-category = "sport">
+            <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
                         <div class="image-wrapper">
                             <a href="#">
                         <img src="../images/hiking-event.jpg" class="card-img-top" alt="let's Hike Event">
-                        <div class="event-date" data-date = "2024-04-27">
+                        <div class="event-date date-to-style" data-date = "2024-04-27">
                         <span><span class="event-day">27 </span><span class="event-month">Apr</span></span>
                         <hr>
                         <span class="time">8:00 pm</span>
@@ -114,11 +114,11 @@
                         </div>
                 </div>
             </div>
-            <div class="card p-0 col-md-4 col-lg-3 event-card text-center" data-category = "sport">
+            <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
                 <div class="image-wrapper">
                     <a href="#">
                 <img src="../images/run-for-fun-event.jpg" class="card-img-top" alt="Running event">
-                <div class="event-date" data-date = "2024-06-20">
+                <div class="event-date date-to-style" data-date = "2024-06-20">
                 <span><span class="event-day">20 </span><span class="event-month">Jun</span></span>
                 <hr>
                 <span class="time">3:30 pm</span>
@@ -136,11 +136,11 @@
                 </div>
         </div>
     </div>
-        <div class="card p-0 col-md-4 col-lg-3 event-card text-center" data-category = "sport">
+        <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
             <div class="image-wrapper">
                 <a href="#">
             <img src="../images/volley-ball-event.jpg" class="card-img-top" alt="volleyBall match Event">
-            <div class="event-date" data-date = "2024-04-30">
+            <div class="event-date date-to-style" data-date = "2024-04-30">
             <span><span class="event-day">30 </span><span class="event-month">Apr</span></span>
             <hr>
             <span class="time">7:00 pm</span>
@@ -158,11 +158,11 @@
             </div>
     </div>
     </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card text-center" data-category = "art">
+    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "art">
         <div class="image-wrapper">
             <a href="#">
         <img src="../images/artisan-alias-event.jpg" class="card-img-top" alt="Art Workshop event">
-        <div class="event-date" data-date = "2024-04-18">
+        <div class="event-date date-to-style" data-date = "2024-04-18">
         <span><span class="event-day">18 </span><span class="event-month">Apr</span></span>
         <hr>
         <span class="time">6:00 pm</span>
@@ -181,11 +181,11 @@
         </div>
     </div>
     </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card text-center" data-category = "society">
+    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "society">
         <div class="image-wrapper">
             <a href="#">
         <img src="../images/let's-scout-event.jpg" class="card-img-top" alt="Scout club">
-        <div class="event-date" data-date = "2024-04-20">
+        <div class="event-date date-to-style" data-date = "2024-04-20">
         <span><span class="event-day">20 </span><span class="event-month">Apr</span></span>
         <hr>
         <span class="time">4:00 pm</span>
@@ -204,11 +204,11 @@
         </div>
     </div>
     </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card text-center" data-category = "programming">
+    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "programming">
         <div class="image-wrapper">
             <a href="#">
         <img src="../images/mobile-development-upcoming-event.png" class="card-img-top" alt="Mobile development event">
-        <div class="event-date" data-date = "2024-05-07">
+        <div class="event-date date-to-style" data-date = "2024-05-07">
         <span><span class="event-day">07 </span><span class="event-month">May</span></span>
         <hr>
         <span class="time">11:00 am</span>
@@ -232,11 +232,11 @@
         </div>
     </div>
     </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card text-center" data-category = "gaming">
+    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "gaming">
         <div class="image-wrapper">
             <a href="#">
         <img src="../images/gaming-vr-upcoming-event.png" class="card-img-top" alt="gaming VR event">
-        <div class="event-date" data-date = "2024-05-09">
+        <div class="event-date date-to-style" data-date = "2024-05-09">
         <span><span class="event-day">09 </span><span class="event-month">May</span></span>
         <hr>
         <span class="time">2:00 pm</span>
@@ -256,11 +256,11 @@
         </div>
     </div>
     </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card text-center" data-category = "sport">
+    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
         <div class="image-wrapper">
             <a href="#">
         <img src="../images/ping-pong-event.jpg" class="card-img-top" alt="Paddle Pros club">
-        <div class="event-date" data-date = "2024-03-22">
+        <div class="event-date date-to-style" data-date = "2024-03-22">
         <span><span class="event-day">22 </span><span class="event-month">Mar</span></span>
         <hr>
         <span class="time">8:00 pm</span>
@@ -279,11 +279,11 @@
         </div>
     </div>
     </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card text-center" data-category = "technology">
+    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "technology">
         <div class="image-wrapper">
             <a href="#">
         <img src="../images/tech-titans-event.jpg" class="card-img-top" alt="technology event">
-        <div class="event-date" data-date = "2024-04-13">
+        <div class="event-date date-to-style" data-date = "2024-04-13">
         <span><span class="event-day">13 </span><span class="event-month">Apr</span></span>
         <hr>
         <span class="time">3:30 pm</span>
@@ -302,11 +302,11 @@
         </div>
     </div>
     </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card text-center" data-category = "sport">
+    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
         <div class="image-wrapper">
             <a href="#">
         <img src="../images/yoga-event.jpg" class="card-img-top" alt="Yoga event">
-        <div class="event-date" data-date = "2024-05-03">
+        <div class="event-date date-to-style" data-date = "2024-05-03">
         <span><span class="event-day">03 </span><span class="event-month">May</span></span>
         <hr>
         <span class="time">2:30 pm</span>
@@ -326,11 +326,11 @@
         </div>
     </div>
     </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card text-center" data-category = "society">
+    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "society">
         <div class="image-wrapper">
             <a href="#">
         <img src="../images/gardening-workshop-event.jpg" class="card-img-top" alt="garden workshop event">
-        <div class="event-date" data-date = "2024-04-12">
+        <div class="event-date date-to-style" data-date = "2024-04-12">
         <span><span class="event-day">12 </span><span class="event-month">Apr</span></span>
         <hr>
         <span class="time">8:00 pm</span>
