I've done the my-list.html page with it localstorage things

--- a/student-interface/events.html
+++ b/student-interface/events.html
@@ -95,18 +95,18 @@
             <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
                         <div class="image-wrapper">
                             <a href="#">
-                        <img src="../images/hiking-event.jpg" class="card-img-top" alt="let's Hike Event">
+                        <img src="../images/hiking-event.jpg" class="card-img-top event-img" alt="let's Hike Event">
                         <div class="event-date date-to-style" data-date = "2024-04-27">
                         <span><span class="event-day">27 </span><span class="event-month">Apr</span></span>
                         <hr>
-                        <span class="time">8:00 pm</span>
+                        <span class="event-time">8:00 pm</span>
                     </div>
                     </a>
                     </div>
                     
                     <div class="card-body">
                         <h5 class="card-title mt-5">Let's Hike Together</h5>
-                        <p class="card-text text-black-50">"Embark on an unforgettable hiking journey to conquer the summit of Büyük Camlica Hill.
+                        <p class="card-text text-black-50">Embark on an unforgettable hiking journey to conquer the summit of Büyük Camlica Hill.
                              Experience breathtaking views, diverse wildlife, and camaraderie. Join us for adventure!</p>
                         <div class="info-list">
                             <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
@@ -117,11 +117,11 @@
             <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
                 <div class="image-wrapper">
                     <a href="#">
-                <img src="../images/run-for-fun-event.jpg" class="card-img-top" alt="Running event">
+                <img src="../images/run-for-fun-event.jpg" class="card-img-top event-img" alt="Running event">
                 <div class="event-date date-to-style" data-date = "2024-06-20">
                 <span><span class="event-day">20 </span><span class="event-month">Jun</span></span>
                 <hr>
-                <span class="time">3:30 pm</span>
+                <span class="event-time">3:30 pm</span>
             </div>
             </a>
             </div>
@@ -139,11 +139,11 @@
         <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
             <div class="image-wrapper">
                 <a href="#">
-            <img src="../images/volley-ball-event.jpg" class="card-img-top" alt="volleyBall match Event">
+            <img src="../images/volley-ball-event.jpg" class="card-img-top event-img" alt="volleyBall match Event">
             <div class="event-date date-to-style" data-date = "2024-04-30">
             <span><span class="event-day">30 </span><span class="event-month">Apr</span></span>
             <hr>
-            <span class="time">7:00 pm</span>
+            <span class="event-time">7:00 pm</span>
         </div>
         </a>
         </div>
@@ -161,11 +161,11 @@
     <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "art">
         <div class="image-wrapper">
             <a href="#">
-        <img src="../images/artisan-alias-event.jpg" class="card-img-top" alt="Art Workshop event">
+        <img src="../images/artisan-alias-event.jpg" class="card-img-top event-img" alt="Art Workshop event">
         <div class="event-date date-to-style" data-date = "2024-04-18">
         <span><span class="event-day">18 </span><span class="event-month">Apr</span></span>
         <hr>
-        <span class="time">6:00 pm</span>
+        <span class="event-time">6:00 pm</span>
     </div>
     </a>
     </div>
@@ -184,11 +184,11 @@
     <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "society">
         <div class="image-wrapper">
             <a href="#">
-        <img src="../images/let's-scout-event.jpg" class="card-img-top" alt="Scout club">
+        <img src="../images/let's-scout-event.jpg" class="card-img-top event-img" alt="Scout club">
         <div class="event-date date-to-style" data-date = "2024-04-20">
         <span><span class="event-day">20 </span><span class="event-month">Apr</span></span>
         <hr>
-        <span class="time">4:00 pm</span>
+        <span class="event-time">4:00 pm</span>
     </div>
     </a>
     </div>
@@ -207,11 +207,11 @@
     <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "programming">
         <div class="image-wrapper">
             <a href="#">
-        <img src="../images/mobile-development-upcoming-event.png" class="card-img-top" alt="Mobile development event">
+        <img src="../images/mobile-development-upcoming-event.png" class="card-img-top event-img" alt="Mobile development event">
         <div class="event-date date-to-style" data-date = "2024-05-07">
         <span><span class="event-day">07 </span><span class="event-month">May</span></span>
         <hr>
-        <span class="time">11:00 am</span>
+        <span class="event-time">11:00 am</span>
     </div>
     </a>
     </div>
@@ -235,11 +235,11 @@
     <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "gaming">
         <div class="image-wrapper">
             <a href="#">
-        <img src="../images/gaming-vr-upcoming-event.png" class="card-img-top" alt="gaming VR event">
+        <img src="../images/gaming-vr-upcoming-event.png" class="card-img-top event-img" alt="gaming VR event">
         <div class="event-date date-to-style" data-date = "2024-05-09">
         <span><span class="event-day">09 </span><span class="event-month">May</span></span>
         <hr>
-        <span class="time">2:00 pm</span>
+        <span class="event-time">2:00 pm</span>
     </div>
     </a>
     </div>
@@ -259,11 +259,11 @@
     <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
         <div class="image-wrapper">
             <a href="#">
-        <img src="../images/ping-pong-event.jpg" class="card-img-top" alt="Paddle Pros club">
+        <img src="../images/ping-pong-event.jpg" class="card-img-top event-img" alt="Paddle Pros club">
         <div class="event-date date-to-style" data-date = "2024-03-22">
         <span><span class="event-day">22 </span><span class="event-month">Mar</span></span>
         <hr>
-        <span class="time">8:00 pm</span>
+        <span class="event-time">8:00 pm</span>
     </div>
     </a>
     </div>
@@ -282,11 +282,11 @@
     <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "technology">
         <div class="image-wrapper">
             <a href="#">
-        <img src="../images/tech-titans-event.jpg" class="card-img-top" alt="technology event">
+        <img src="../images/tech-titans-event.jpg" class="card-img-top event-img" alt="technology event">
         <div class="event-date date-to-style" data-date = "2024-04-13">
         <span><span class="event-day">13 </span><span class="event-month">Apr</span></span>
         <hr>
-        <span class="time">3:30 pm</span>
+        <span class="event-time">3:30 pm</span>
     </div>
     </a>
     </div>
@@ -305,11 +305,11 @@
     <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
         <div class="image-wrapper">
             <a href="#">
-        <img src="../images/yoga-event.jpg" class="card-img-top" alt="Yoga event">
+        <img src="../images/yoga-event.jpg" class="card-img-top event-img" alt="Yoga event">
         <div class="event-date date-to-style" data-date = "2024-05-03">
         <span><span class="event-day">03 </span><span class="event-month">May</span></span>
         <hr>
-        <span class="time">2:30 pm</span>
+        <span class="event-time">2:30 pm</span>
     </div>
     </a>
     </div>
@@ -329,11 +329,11 @@
     <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "society">
         <div class="image-wrapper">
             <a href="#">
-        <img src="../images/gardening-workshop-event.jpg" class="card-img-top" alt="garden workshop event">
+        <img src="../images/gardening-workshop-event.jpg" class="card-img-top event-img" alt="garden workshop event">
         <div class="event-date date-to-style" data-date = "2024-04-12">
         <span><span class="event-day">12 </span><span class="event-month">Apr</span></span>
         <hr>
-        <span class="time">8:00 pm</span>
+        <span class="event-time">8:00 pm</span>
     </div>
     </a>
     </div>
@@ -362,4 +362,5 @@
 <script src="../js/all.min.js"></script>
 <script src="../js/navbar.js"></script>
 <script src="../student-interface/script.js"></script>
+<script src="../student-interface/listed-events-storage.js"></script>
 </body>
