Fixed some errors, added event removed successfuly

--- a/student-interface/my-list.html
+++ b/student-interface/my-list.html
@@ -64,9 +64,9 @@
           </div>
         </div>
       </nav>
-     
       <div class="header-my-list">
         <h3>My List <span></span></h3>
+        <p class="successful-message">Event Removed Successfully</p>
       </div>
       <div class="table-container">
         <div class="no-clubs-events-matches hidden-div">
