--- a/student-interface/homepage.html
+++ b/student-interface/homepage.html
@@ -134,10 +134,10 @@
 
       <div class="upcoming-events-section">
         <h1 class="section-title">Upcoming Event</h1>
-        <div class="event-post">
+        <div class="event-post event-card" data-category="design">
             <div class="event-details">
-            <h1>How To Become An Architect</h1>
-            <p class="event-paragraph text-black-50">
+            <h1 class="card-title">How To Become An Architect</h1>
+            <p class="event-paragraph text-black-50 card-text">
                 To host an architect event, gather experienced professionals to share insights
                  on academic paths, licensure, and career options. Include workshops on design
                   and technical skills, networking sessions for mentorship, and opportunities to showcase
@@ -145,12 +145,11 @@
             </p>
             <div class="info-list">
                 <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-                <span class="add-to-list-btn add-to-list-plus"></span>
             </div>
             <div class="event-infos">
                 <div class="date-time">
                     <i class="fa-regular fa-calendar"></i>
-                    <p class="text-black-50">Mon, MAY 06, 10:00 am </p>
+                    <p class="text-black-50 event-date">Mon, <span class="event-month">MAY</span> <span class="event-day">06</span>, <span class="event-time">10:00 am</span> </p>
                 </div>
                 <div class="location">
                     <i class="fa-solid fa-location-dot"></i>
@@ -164,14 +163,14 @@
             </div>
         </div>
         <div class="event-image">
-            <img src="../images/architect-upcoming-event.png" alt="architect upcoming event">
+            <img class="event-img" src="../images/architect-upcoming-event.png" alt="architect upcoming event">
         </div>
         </div>
 
-        <div class="event-post reverse-div">
+        <div class="event-post event-card reverse-div" data-category="programming">
             <div class="event-details">
-            <h1>Mobile Minds: Exploring the World of App Development</h1>
-            <p class="event-paragraph text-black-50">
+            <h1 class="card-title">Mobile Minds: Exploring the World of App Development</h1>
+            <p class="event-paragraph text-black-50 card-text">
                 Welcome to 'Mobile Minds: Exploring the World of App Development', your go-to podcast for all
                  things mobile development! Join us on a journey through the latest trends, technologies, and insights
                   shaping the fast-paced world of app creation. Whether you're an experienced developer seeking advanced
@@ -181,13 +180,13 @@
             </p>
             <div class="info-list">
                 <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-                <span class="add-to-list-btn add-to-list-plus"></span>
             </div>
             
             <div class="event-infos">
                 <div class="date-time">
                     <i class="fa-regular fa-calendar"></i>
-                    <p class="text-black-50">Tue, MAY 07, 11:00 am </p>
+                    <p class="text-black-50 event-date">Tue, <span class="event-month">MAY</span> <span class="event-day">07</span>, <span class="event-time">11:00 am</span> </p>
+
                 </div>
                 <div class="location">
                     <i class="fa-solid fa-location-dot"></i>
@@ -201,13 +200,13 @@
             </div>
         </div>
         <div class="event-image">
-            <img src="../images/mobile-development-upcoming-event.png" alt="architect upcoming event">
+            <img class="event-img" src="../images/mobile-development-upcoming-event.png" alt="architect upcoming event">
         </div>
         </div>
-        <div class="event-post">
+        <div class="event-post event-card" data-category="gaming">
             <div class="event-details">
-            <h1>Virtual Realms: Gaming in the VR Universe</h1>
-            <p class="event-paragraph text-black-50">
+            <h1 class="card-title">Virtual Realms: Gaming in the VR Universe</h1>
+            <p class="event-paragraph text-black-50 card-text">
                 Step into 'Virtual Realms: Gaming in the VR Universe' for an unparalleled gaming adventure!
                  Immerse yourself in cutting-edge VR technology, thrilling demos, and competitive tournaments.
                   Whether you're a seasoned VR enthusiast or new to the experience, there's something for everyone.
@@ -215,12 +214,12 @@
             </p>
             <div class="info-list">
                 <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-                <span class="add-to-list-btn add-to-list-plus"></span>
             </div>
             <div class="event-infos">
                 <div class="date-time">
                     <i class="fa-regular fa-calendar"></i>
-                    <p class="text-black-50">Thu, MAY 09, 2:00 pm </p>
+                    <p class="text-black-50 event-date">Thu, <span class="event-month">MAY</span> <span class="event-day">09</span>, <span class="event-time">2:00 pm</span> </p>
+
                 </div>
                 <div class="location">
                     <i class="fa-solid fa-location-dot"></i>
@@ -234,7 +233,7 @@
             </div>
         </div>
         <div class="event-image">
-            <img src="../images/gaming-vr-upcoming-event.png" alt="architect upcoming event">
+            <img class="event-img" src="../images/gaming-vr-upcoming-event.png" alt="architect upcoming event">
         </div>
         </div>
         <div class="Explore-Events-container d-flex justify-content-center mt-5 mb-5 pt-3 pb-3">
