--- a/student-interface/homepage.html
+++ b/student-interface/homepage.html
@@ -36,14 +36,13 @@
                 <a id="my-list" class="nav-link" href="../student-interface/my-list.html">My List</a>
               </li>
             </ul>
-            <div class="reg-buttons flex-column align-items-center gap-3 gap-lg-2 flex-lg-row">
-            <a href="../registration/login-form.html"><button type="button" class="main-btn login-btn">Log in</button></a>
-            <a href="../registration/signup-form.html"><button type="button" class="main-btn signup-btn">Sign up</button></a>
+            <div class="reg-buttons flex-column align-items-center gap-2 gap-lg-3 flex-lg-row">
+                <a href="../registration/login-form.html"><button type="button" class="main-btn logout-btn">Log out</button></a>
+                <div class="profile-letter">N</div>
             </div>
           </div>
         </div>
       </nav>
-
       <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
