--- a/club-manager-interface/event-activity.html
+++ b/club-manager-interface/event-activity.html
@@ -9,14 +9,8 @@
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Add JSZip library -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
-
-<!-- Add FileSaver.js library -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
-
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500&display=swap" rel="stylesheet">
-    <title>ClubConnect | Create An Activity Event</title>
+    <title>ClubConnect | Create An Event Activity</title>
 </head>
 <body id="activity">
     <nav class="navbar navbar-expand-lg sticky-top">
@@ -49,9 +43,9 @@
           </div>
         </div>
       </nav>
-      <div class="image-wrapper">
+      <div class="image-wrapper bg-image-activity">
         <div class="filter-bg"></div>
-        <h1>Create Your Event Activity</h1>
+        <h1>Create An Event Activity</h1>
       </div>
       <div class="alert alert-info for-info" role="alert">
         <i class="fa-solid fa-circle-info"></i>
@@ -61,7 +55,7 @@
         <h3>Submit Your Event Activity Form</h3>
       </div>
       <form action="" method="post">
-        <div class="input-container justify-content-between gap-0">
+        <div class="input-container justify-content-lg-between gap-lg-0 gap-4">
             <div class="input-wrapper">
                 <label for="f-name">First Name:</label>
             <input type="text" name="firstname" id="f-name" placeholder="e.g Nouhad">
@@ -81,7 +75,7 @@
                 <label for="e-title">Event Title:</label>
             <input type="text" name="event-title" id="e-title" placeholder="Event Title">
             </div>
-            <div class="input-wrapper">
+            <div class="input-wrapper set-top">
                 <label for="s-categories">Select a category:</label>
             <select name="categories" id="s-categories">
                 <option value="sport">Sport</option>
@@ -99,14 +93,15 @@
             <i class="fas fa-cloud-upload-alt"></i> Choose File
         </label>
         <input id="file-upload" type="file" onchange="displayFiles(this)" multiple />
-        
         </div>
         <div id="file-list"></div>
+        <strong class="image-error">You should set an image for your event</strong>
+
         <div class="alert alert-warning m-2" role="alert">
             <i class="fa-solid fa-triangle-exclamation"></i>
           You can only choose one image to represent your event. Ensure that the selected image effectively encapsulates the essence and theme of your event.
           </div>
-        <div class="input-container justify-content-between gap-0 mt-5">
+        <div class="input-container justify-content-lg-between gap-lg-0 gap-4 mt-5">
             <div class="input-wrapper">
                 <label for="e-date">Event Date:</label>
             <input type="date" name="date" id="e-date">
@@ -119,34 +114,18 @@
                 <label for="e-location">Location:</label>
             <input type="text" name="location" id="e-location" placeholder="e.g Uskudar Univer...">
             </div>
-            <div class="input-wrapper mt-4">
+            <div class="input-wrapper mt-lg-4">
                 <label for="p-number">Phone Number:</label>
             <input type="text" name="phone number" id="p-number" placeholder="e.g +90 (512) 345 678 9">
+            <strong class="phone-error">Invalid Number</strong>
             </div>
         </div>
         <h6>Event Description:</h6>
         <div class="description-container">
-            <textarea name="description" id="e-description" cols="80" rows="5" placeholder="e.g The goal of this event..."></textarea>
-            <button type="button" class="send-request-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Submit Request</button>
+            <textarea name="description" id="e-description" placeholder="e.g The goal of this event..."></textarea>
+            <strong class="description-error">The Description should be between 300-4000 letter</strong>
         </div>
-  
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Confirm Submission</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to submit this request?
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn no-btn" data-bs-dismiss="modal">No</button>
-            <button type="button" class="btn yes-btn">Yes</button>
-            </div>
-        </div>
-        </div>
-    </div>
+        <button onclick="checkFormValidation()" type="button" class="send-request-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Submit Request</button>
       </form>
 
       <footer>
